--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Snake Game v. 1.0</title>
+	<title>Snake Game v1.0</title>
 	<link rel="stylesheet" href="style.css">
 	<link rel="icon" href="favicon.ico">
 </head>
